# Monte-Carlo-study-of-the-2D-Ising-model

./: .gitignore  CMakeLists.txt  LICENSE  README.md  proj_4.c
report/: Project4.tex
